--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: saccades
 Type: Package
 Title: Detection of Fixations in Eye-Tracking Data
-Version: 0.1
-Date: 2014-09-30
+Version: 0.1-1
+Date: 2015-03-17
 Authors@R: c(person("Titus", "von der Malsburg", email="malsburg@posteo.de",
     role=c("aut", "cph", "cre")))
 Description: Functions for detecting eye fixations in raw eye-tracking
@@ -17,9 +17,9 @@ License: GPL-2
 URL: https://github.com/tmalsburg/saccades
 BugReports: https://github.com/tmalsburg/saccades/issues
 Depends: R (>= 2.10), zoom
-Packaged: 2014-10-04 01:05:13 UTC; malsburg
+Packaged: 2015-03-17 23:21:09 UTC; malsburg
 Author: Titus von der Malsburg [aut, cph, cre]
 Maintainer: Titus von der Malsburg <malsburg@posteo.de>
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2014-10-04 06:35:47
+Date/Publication: 2015-03-18 07:02:18
